# flexistack

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: auto-release.yml  python-publish.yml
examples/: Dockerfile  Makefile  Makefile.env  __main__.py
examples/actions/generate/: random-number.py
examples/application/: __main__.py
examples/application/actions/: shuffle.py  version.py
examples/application/actions/generate/: .flexistack  random-number.py  random-string.py
examples/application/core/: terminal.py
examples/application/plugins/dummy-generator/v0.1/: dummy_generator.py
examples/application/plugins/dummy-generator/v0.2/: dummy_generator.py
examples/plugins/dummy-generator/v0.1/: dummy_generator.py
examples/plugins/dummy-generator/v0.1.0/: dummy_generator.py
examples/plugins/dummy-generator/v0.1.1/: dummy_generator.py
examples/plugins/dummy-generator/v0.2/: dummy_generator.py
src/flexistack/: __init__.py  autoloader.py  flexistack.py  helper.py
tests/: __main__.py
tests/actions/: version.py
tests/plugins/dummy-generator/v0.1.0/: dummy_generator.py
tests/plugins/dummy-generator/v0.1.1/: dummy_generator.py
