# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexistack"
version = "0.1.0-dev3"
description = "Simple and easy to use framework"
readme = "README.md"
authors = [{ name = "Ioannis D (devcoons)", email = "support@devcoons.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["flexistack","autoloader"]
dependencies = [
    "psutil==5.9.8",
    "pyaes==1.6.1",
    "pywin32; os_name == 'nt'",
]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
Homepage = "https://github.com/devcoons/flexistack"
Issues = "https://github.com/devcoons/flexistack/issues"
